[package]
name = "fishinge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eventsub_websocket = { path = "../eventsub_websocket" }
async-channel = "1.8.0"
toml = "0.5.10"
dirs = "4.0.0"
anyhow = "1.0.68"
eframe = "0.20.1"
egui = "0.20.1"
